--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/Breweries_usa?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=brewery_user
+spring.datasource.password=brewery_password
+spring.jpa.database=mysql
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
